Prevent background colour overflowing card headers

--- a/src/scss/cs/cards.scss
+++ b/src/scss/cs/cards.scss
@@ -233,3 +233,9 @@ a.icon-card, a.cs-card {
 .featured-news-item {
   color: $cs-black;
 }
+
+.card-header {
+  // Prevents background colour overflowing the border radius
+  border-top-left-radius : inherit !important;
+  border-top-right-radius: inherit !important;
+}
